--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: home
 author_profile: true
 header:
-  image: "/images/homepage_frontmatter_image.png"
+  image: "/images/homepage_frontmatter_image.jpg"
 ---
